--- a/src/components/app.css
+++ b/src/components/app.css
@@ -1,3 +1,18 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .text {
-  color: red;
+  color: #555;
+}
+
+.test-asset {
+  background-image: url('../assets/SVG_Logo.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 128px;
+  height: 128px;
+  background-size: contain;
 }
